--- a/prompt/index.html
+++ b/prompt/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qubitt Technologies | Premium Custom Software Solutions</title>
+    <title>Audentix Technologies | Premium Custom Software Solutions</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -160,7 +160,7 @@
                     <div class="w-10 h-10 bg-gradient-to-br from-blue-500 to-purple-600 rounded-lg flex items-center justify-center transform rotate-3 hover:rotate-6 transition-transform">
                         <span class="text-white font-bold text-xl">Q</span>
                     </div>
-                    <span class="font-display font-bold text-2xl tracking-tight">Qubitt</span>
+                    <span class="font-display font-bold text-2xl tracking-tight">Audentix</span>
                 </div>
 
 
@@ -601,7 +601,7 @@
                             <div class="glass rounded-3xl p-8 md:p-12 text-center relative">
                                 <i data-lucide="quote" class="w-12 h-12 text-blue-500/30 absolute top-6 left-6"></i>
                                 <p class="text-xl md:text-2xl text-gray-700 dark:text-gray-300 mb-8 italic leading-relaxed">
-                                    "Qubitt transformed our MVP into a enterprise-grade platform in just 3 months. Their technical expertise and attention to detail exceeded all expectations."
+                                    "Audentix transformed our MVP into a enterprise-grade platform in just 3 months. Their technical expertise and attention to detail exceeded all expectations."
                                 </p>
                                 <div class="flex items-center justify-center gap-4">
                                     <div class="w-14 h-14 rounded-full bg-gradient-to-br from-blue-400 to-purple-500 flex items-center justify-center text-white font-bold text-xl">SK</div>
@@ -626,7 +626,7 @@
                             <div class="glass rounded-3xl p-8 md:p-12 text-center relative">
                                 <i data-lucide="quote" class="w-12 h-12 text-blue-500/30 absolute top-6 left-6"></i>
                                 <p class="text-xl md:text-2xl text-gray-700 dark:text-gray-300 mb-8 italic leading-relaxed">
-                                    "The AI solution Qubitt built reduced our customer service costs by 60% while improving satisfaction scores. Truly exceptional work."
+                                    "The AI solution Audentix built reduced our customer service costs by 60% while improving satisfaction scores. Truly exceptional work."
                                 </p>
                                 <div class="flex items-center justify-center gap-4">
                                     <div class="w-14 h-14 rounded-full bg-gradient-to-br from-green-400 to-cyan-500 flex items-center justify-center text-white font-bold text-xl">MR</div>
@@ -651,7 +651,7 @@
                             <div class="glass rounded-3xl p-8 md:p-12 text-center relative">
                                 <i data-lucide="quote" class="w-12 h-12 text-blue-500/30 absolute top-6 left-6"></i>
                                 <p class="text-xl md:text-2xl text-gray-700 dark:text-gray-300 mb-8 italic leading-relaxed">
-                                    "Professional, responsive, and incredibly skilled. Qubitt delivered our fintech platform on time and under budget. Highly recommended."
+                                    "Professional, responsive, and incredibly skilled. Audentix delivered our fintech platform on time and under budget. Highly recommended."
                                 </p>
                                 <div class="flex items-center justify-center gap-4">
                                     <div class="w-14 h-14 rounded-full bg-gradient-to-br from-orange-400 to-pink-500 flex items-center justify-center text-white font-bold text-xl">EC</div>
@@ -782,7 +782,7 @@
                             </div>
                             <div>
                                 <div class="font-medium">Email</div>
-                                <div class="text-gray-600 dark:text-gray-400">hello@qubitt.tech</div>
+                                <div class="text-gray-600 dark:text-gray-400">hello@audentix.com</div>
                             </div>
                         </div>
                         <div class="flex items-center gap-4">
@@ -872,7 +872,7 @@
                         <div class="w-8 h-8 bg-gradient-to-br from-blue-500 to-purple-600 rounded-lg flex items-center justify-center">
                             <span class="text-white font-bold">Q</span>
                         </div>
-                        <span class="font-display font-bold text-xl">Qubitt Technologies</span>
+                        <span class="font-display font-bold text-xl">Audentix Technologies</span>
                     </div>
                     <p class="text-gray-400 max-w-sm">Premium custom software solutions for businesses ready to innovate. We transform complex challenges into elegant digital solutions.</p>
                 </div>
@@ -896,7 +896,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-800 pt-8 flex flex-col md:flex-row justify-between items-center gap-4">
-                <div class="text-gray-400 text-sm">© 2026 Qubitt Technologies. All rights reserved.</div>
+                <div class="text-gray-400 text-sm">© 2026 Audentix Technologies. All rights reserved.</div>
                 <div class="flex gap-6 text-sm text-gray-400">
                     <a href="#" class="hover:text-white transition-colors">Privacy Policy</a>
                     <a href="#" class="hover:text-white transition-colors">Terms of Service</a>
