--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Qubitt Technologies - Premium custom software development company specializing in AI, SaaS, and enterprise solutions" />
+    content="Audentix - Premium custom software development company specializing in AI, SaaS, and enterprise solutions" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap"
     rel="stylesheet" />
-  <title>Qubitt Technologies - Premium Software Development</title>
+  <title>Audentix - Premium Software Development</title>
 </head>
 
 <body>
